index.html : move script bottom of body tag, delete div.blurred-img (this way of loading imgs is no longer relevant). Removing some margin.

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ img:hover {
   filter: blur(0);
 }
 
-.grid-item-gallery {
+.grid-item {
   position: relative;
   /* box-shadow:10px 10px 24px -12px rgba(0,0,0,0.75); */
 }
